--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="js/slick.min.js"></script>
 
     <title>Keio Girls Golf</title>
+    
+     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+     
 </head>
 
 <body>
@@ -26,8 +29,8 @@
 
 
         <img src="image/mainvisu3.png" alt="" class="main-right">
-        <!--        <img src="image/mainvisual-left.JPG" alt="" class="main-left">-->
-        <div class="titlebox">
+
+        <div class="keio-title">
             <h1><span>K</span>EIO<br>GIRLS' GOLF<br>TEAM</h1>
         </div>
          <div class="slider">
