モーダル完成

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="http://www.keio-golf.com/blog/cat21939059/index.html" target="_blank">活動紹介</a></li>
                 <li><a href="#interview-section">部員の声</a></li>
                 <li><a href="#freshmen-section">新歓情報</a></li>
-                <li><a class="nav-register-button" href="https://www.google.com/intl/ja_jp/forms/about/">説明会お申し込み</a></li>
+                <li><a class="nav-register-button" href="https://www.google.com/intl/ja_jp/forms/about/" target="_blank">説明会お申し込み</a></li>
             </ul>
 
         </nav>
@@ -93,13 +93,13 @@
                             <p>部員の声</p>
                         </div>
 
-                        <div class="modal__content_yuna">
+                        <div class="modal_whitebox">
 
                             <div class="modal_flexbox">
-                                <img src="image/yunaw:shadow.png" alt="" class="yunashadow">
+                                <img src="image/yuna_shadow.png" alt="" class="yunashadow">
 
-                                <div class="modal_text">
-                                    <h3>田中佑奈<span>法学部政治学科3年</span></h3>
+                                <div class="modal_textbox">
+                                    <h3>田中佑奈<span> 法学部政治学科3年</span></h3>
                                     <p>ゴルフは努力した分だけ必ず結果がスコアとなって返ってくる
                                         スポーツです。そして、体育会ゴルフ部には結果が出るまでの
                                         辛い期間もそれを一緒に乗り越えてくれる仲間がいます。体育
@@ -111,7 +111,7 @@
                             </div>
 
 
-                            <a class="js-modal-close" href="">閉じる</a>
+                            <a class="js-modal-close" href=""><img src="image/batsu-button.png" alt=""></a>
                         </div>
                     </div>
                     <!--modal__inner-->
@@ -120,22 +120,67 @@
 
                 <div id="modal02" class="modal js-modal">
                     <div class="modal__bg js-modal-close"></div>
+
                     <div class="modal_bluebox">
 
-                        <p>2つ目モーダルウィンドウです。ここにモーダルウィンドウで表示したいコンテンツを入れます。モーダルウィンドウを閉じる場合は下の「閉じる」をクリックするか、背景の黒い部分をクリックしても閉じることができます。</p>
-                        <a class="js-modal-close" href="">閉じる</a>
+                        <div class="modal-interview-title">
+                            <h2>INTERVIEW</h2>
+                            <p>部員の声</p>
+                        </div>
+
+                        <div class="modal_whitebox">
+
+                            <div class="modal_flexbox">
+                                <img src="image/ayaka_shadow.png" alt="" class="yunashadow">
+
+                                <div class="modal_textbox">
+                                    <h3>水津彩花<span> 環境情報学科3年</span></h3>
+                                    <p>ゴルフは努力した分だけ必ず結果がスコアとなって返ってくる
+                                        スポーツです。そして、体育会ゴルフ部には結果が出るまでの
+                                        辛い期間もそれを一緒に乗り越えてくれる仲間がいます。体育
+                                        会なので規律が厳しい面もありますが、部員が一致団結し、目
+                                        標に向かって助け合いながら日々努力する環境が魅力の一つだ
+                                        と思います。</p>
+
+                                </div>
+                            </div>
+
+
+                            <a class="js-modal-close" href=""><img src="image/batsu-button.png" alt=""></a>
+                        </div>
                     </div>
-                    <!--modal__inner-->
                 </div>
                 <!--modal-->
 
                 <div id="modal03" class="modal js-modal">
                     <div class="modal__bg js-modal-close"></div>
                     <div class="modal_bluebox">
-                        <p>3つ目モーダルウィンドウです。ここにモーダルウィンドウで表示したいコンテンツを入れます。モーダルウィンドウを閉じる場合は下の「閉じる」をクリックするか、背景の黒い部分をクリックしても閉じることができます。</p>
-                        <a class="js-modal-close" href="">閉じる</a>
+
+                        <div class="modal-interview-title">
+                            <h2>INTERVIEW</h2>
+                            <p>部員の声</p>
+                        </div>
+
+                        <div class="modal_whitebox">
+                            <div class="modal_flexbox">
+                                <img src="image/lisa_shadow.png" alt="" class="yunashadow">
+
+                                <div class="modal_textbox">
+                                    <h3>木村理咲<span> 法学部政治学科3年</span></h3>
+                                    <p>ゴルフは努力した分だけ必ず結果がスコアとなって返ってくる
+                                        スポーツです。そして、体育会ゴルフ部には結果が出るまでの
+                                        辛い期間もそれを一緒に乗り越えてくれる仲間がいます。体育
+                                        会なので規律が厳しい面もありますが、部員が一致団結し、目
+                                        標に向かって助け合いながら日々努力する環境が魅力の一つだ
+                                        と思います。</p>
+
+                                </div>
+                            </div>
+
+
+                            <a class="js-modal-close" href=""><img src="image/batsu-button.png" alt=""></a>
+                        </div>
                     </div>
-                    <!--modal__inner-->
                 </div>
                 <!--modal-->
 
@@ -158,7 +203,7 @@
                 <h4>4<span>月</span>13<span>日(火) </span>18:00~18:45<br>4<span>月</span>15<span>日(木)
                     </span>18:00~18:45</h4>
             </div>
-            <a href="https://www.google.com/intl/ja_jp/forms/about/" class="register-button">説明会お申し込み</a>
+            <a href="https://www.google.com/intl/ja_jp/forms/about/" class="register-button" target="_blank">説明会お申し込み</a>
         </div>
         <div class="welcome-box">
             <div class="welcome-text">
@@ -173,7 +218,7 @@
             <div class="contact-textbox">
                 <h3>気軽に質問してください！</h3>
                 <p>公式LINEではゴルフ部に関する質問を受け付けています。<br>新歓担当の部員が回答させていただきます。</p>
-                <a href="https://line.me/ja/">公式LINE</a>
+                <a href="https://line.me/ja/" target="_blank">公式LINE</a>
             </div>
 
         </div>
@@ -182,7 +227,7 @@
             <div class="contact-textbox">
                 <h3>最新情報をチェック！</h3>
                 <p>公式Instagramでは新歓の最新情報を発信しています。<br>部員紹介なども行なっているのでチェックしてみてください！</p>
-                <a href="https://www.instagram.com/?hl=ja">公式Instagram</a>
+                <a href="https://www.instagram.com/?hl=ja" target="_blank">公式Instagram</a>
 
             </div>
 
@@ -191,21 +236,6 @@
 
 
     </div>
-
-
-
-    <!--
-    <div class="content">
-        <a class="js-modal-open" href=""><img src="image/ayaka.png" alt=""></a>
-    </div>
-    <div class="modal js-modal">
-        <div class="modal__bg js-modal-close"></div>
-        <div class="modal__content">
-            <p>ここにモーダルウィンドウで表示したいコンテンツを入れます。モーダルウィンドウを閉じる場合は下の「閉じる」をクリックするか、背景の黒い部分をクリックしても閉じることができます。</p>
-            <a class="js-modal-close" href="">閉じる</a>
-        </div>
-    </div>
--->
 
 
     <footer>
