aboutus-sectionだけレスポンシブ化

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
     <div id="aboutus-section" class="about-class">
         <img src="image/enjin.jpg" alt="" class="enjin-image">
         <img src="image/hug.jpg" alt="" class="hug-image">
-        <div class="aboutus">
+        <div class="aboutus-box">
             <div class="aboutus-title">
                 <h2>ABOUT US</h2>
                 <p>私たちについて</p>
             </div>
             <div class="aboutus-notalone">
-                <h3>独りじゃない。<br>一緒に戦う<br><span>仲間</span>がいる。</h3>
+                <h3>独りじゃない。<br>一緒に闘う<br><span>仲間</span>がいる。</h3>
             </div>
             <div class="aboutus-text">
-                <p>私たち体育会女子ゴルフ部は関東女子大学Cブロック対抗戦優勝、早慶戦女子優勝を目標に掲げ、現在4年生3人、3年生9人、2年生6人で活動を行なっています。ゴルフは個人スポーツ。でも私たちはチームでゴルフをしています。嬉しい時間、辛い時間を共有し、支えてくれる仲間がここにはいます。</p>
+                <p>私たち体育会女子ゴルフ部は関東女子大学Cブロック対抗戦優勝、早慶戦女子優勝を目標に掲げ、現在4年生3人、3年生9人、2年生6人で活動を行なっています。<br>ゴルフは個人スポーツ。でも私たちはチームでゴルフをしています。<br>嬉しい時間、辛い時間を共有し、支えてくれる仲間がここにはいます。</p>
             </div>
             <a class="katsudou-button" href="http://www.keio-golf.com/blog/cat21939059/index.html" target="_blank">活動内容</a>
         </div>
@@ -187,7 +187,7 @@
             </div>
 
         </div>
-
+ <h5>INTERVIEW</h5>
     </div>
 
 
