interview-sectionまでレスポンシブ9割完成

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
         </nav>
 
         <div class="rightimg-slider">
-            <div><img src="image/first-view-img1.png" alt=""></div>
-            <div><img src="image/first-view-img2.png" alt=""></div>
-            <div><img src="image/first-view-img3.png" alt=""></div>
-            <div><img src="image/first-view-img4.png" alt=""></div>
+            <div><img class="pc_slideimg" src="image/pc_slide_img1.png" alt=""></div>
+            <div><img class="pc_slideimg" src="image/pc_slide_img2.png" alt=""></div>
+            <div><img class="pc_slideimg" src="image/pc_slide_img3.png" alt=""></div>
+            <div><img class="pc_slideimg" src="image/pc_slide_img4.png" alt=""></div>
         </div>
 
         <div class="leftimg">
-            <img src="image/mainvisu3.png" alt="">
+            <img class="pc_leftimg" src="image/mainvisu3.png" alt="">
+            <img class="sp_leftimg" src="image/sp_firstview-25.png" alt="">
 
             <div class="keio-title">
                 <h1><span>K</span>EIO<br>GIRLS' GOLF<br>TEAM</h1>
@@ -75,7 +76,7 @@
                 <h2>INTERVIEW</h2>
                 <p>部員の声</p>
             </div>
-            <div class="member-photo">
+            <div class="interview-dotbox">
 
                 <a class="js-modal-open" href="" data-target="modal01"><img src="image/yuna.png" alt="" class="yuna"></a>
 
@@ -96,7 +97,7 @@
                         <div class="modal_whitebox">
 
                             <div class="modal_flexbox">
-                                <img src="image/yuna_shadow.png" alt="" class="yunashadow">
+                                <img src="image/yuna_shadow.png" alt="" >
 
                                 <div class="modal_textbox">
                                     <h3>田中佑奈<span> 法学部政治学科3年</span></h3>
@@ -111,7 +112,7 @@
                             </div>
 
 
-                            <a class="js-modal-close" href=""><img src="image/batsu-button.png" alt=""></a>
+                            <a class="js-modal-close batsu-button" href=""><img src="image/batsu-button.png" alt=""></a>
                         </div>
                     </div>
                     <!--modal__inner-->
