レスポンシブ化までほぼ完成

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="modal_whitebox">
 
                             <div class="modal_flexbox">
-                                <img src="image/yuna_shadow.png" alt="" >
+                                <img src="image/yuna_shadow.png" alt="">
 
                                 <div class="modal_textbox">
                                     <h3>田中佑奈<span> 法学部政治学科3年</span></h3>
@@ -188,7 +188,7 @@
             </div>
 
         </div>
- <h5>INTERVIEW</h5>
+        <h5>INTERVIEW</h5>
     </div>
 
 
@@ -200,11 +200,14 @@
             </div>
             <div class="freshmen-text">
                 <h3>オンライン説明会開催します。</h3>
-                <p>下記の日程でオンライン説明会を開催します。入部を考えている方、<br>少しでも興味のある方はぜひ聞きに来てください！</p>
+                <p>下記の日程でオンライン説明会を開催します。<br>入部を考えている方、少しでも興味のある方はぜひ聞きに来てください！</p>
                 <h4>4<span>月</span>13<span>日(火) </span>18:00~18:45<br>4<span>月</span>15<span>日(木)
                     </span>18:00~18:45</h4>
+
             </div>
-            <a href="https://www.google.com/intl/ja_jp/forms/about/" class="register-button" target="_blank">説明会お申し込み</a>
+            <a href="https://www.google.com/intl/ja_jp/forms/about/" class="pc_register-button" target="_blank">説明会お申し込み</a>
+            <a href="https://www.google.com/intl/ja_jp/forms/about/" class="sp_register-button" target="_blank">説明会お申し込み</a>
+
         </div>
         <div class="welcome-box">
             <div class="welcome-text">
@@ -214,25 +217,69 @@
         </div>
         <h5>FOR<br>FRESHMEN</h5>
     </div>
+
+
+
+
     <div id="contact-section">
-        <div class="contact-line">
-            <div class="contact-textbox">
-                <h3>気軽に質問してください！</h3>
-                <p>公式LINEではゴルフ部に関する質問を受け付けています。<br>新歓担当の部員が回答させていただきます。</p>
-                <a href="https://line.me/ja/" target="_blank">公式LINE</a>
+        <div class="contact_big_flexbox">
+            <div class="contact-line contact-link">
+
+                <!--               pc用-->
+                <div class="contact-textbox">
+                    <h3>気軽に質問してください！</h3>
+                    <p>公式LINEではゴルフ部に関する質問を受け付けています。<br>新歓担当の部員が回答させていただきます。</p>
+                    <a href="https://line.me/ja/" target="_blank">公式LINE</a>
+
+                </div>
+
+                <!--                PC用ここまで-->
+
+                <!--             sp用-->
+                <div class="sp_contact_small_flexbox">
+                    <div class="sp_contact_textbox">
+                        <h3>気軽に質問してください！</h3>
+                        <p>公式LINEではゴルフ部に関する質問を受け付けています。<br>新歓担当の部員が回答させていただきます。</p>
+
+                    </div>
+
+                    <div class="sp_contact_link sp_line_link">
+                        <a href="https://line.me/ja/" target="_blank">公式LINE</a>
+
+                    </div>
+                </div>
+                <!--             sp用ここまで-->
+
+
+
+
             </div>
 
-        </div>
+            <div class="contact-instagram contact-link">
+                <div class="contact-textbox">
+                    <h3>最新情報をチェック！</h3>
+                    <p>公式Instagramでは新歓の最新情報を発信しています。<br>部員紹介なども行なっているのでチェックしてみてください！</p>
+                    <a href="https://www.instagram.com/?hl=ja" target="_blank">公式Instagram</a>
 
-        <div class="contact-instagram">
-            <div class="contact-textbox">
-                <h3>最新情報をチェック！</h3>
-                <p>公式Instagramでは新歓の最新情報を発信しています。<br>部員紹介なども行なっているのでチェックしてみてください！</p>
-                <a href="https://www.instagram.com/?hl=ja" target="_blank">公式Instagram</a>
+                </div>
+
+                <!--             sp用-->
+                <div class="sp_contact_small_flexbox">
+                    <div class="sp_contact_textbox">
+                        <h3>最新情報をチェック！</h3>
+                       <p>公式Instagramでは新歓の最新情報を発信しています。<br>部員紹介なども行なっているのでチェックしてみてください！</p>
+                    </div>
+
+                    <div class="sp_contact_link ">
+                        <a href="https://line.me/ja/" target="_blank">公式Instagram</a>
+
+                    </div>
+                </div>
+                <!--             sp用ここまで-->
+
+
 
             </div>
-
-
         </div>
 
 
