サイト内リンク入れ替え、ogp情報追加

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     <script src="js/hamburger-menu.js"></script>
         <script src="https://unpkg.com/scrollreveal">
     </script>
-  
+   <meta name="description" content="慶應義塾体育会女子ゴルフ部の2021年度新歓サイトです。">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Keio Girls Golf Shinkan2021">
+    <meta property="og:image" content="image/ogp-image.png">
+    <meta property="og:description" content="慶應義塾体育会女子ゴルフ部の2021年度新歓サイトです。">
 
 
-    <title>Keio Girls Golf</title>
+    <title>Keio Girls Golf Shinkan2021</title>
 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
@@ -38,7 +42,7 @@
                     <li><a href="http://www.keio-golf.com/blog/cat21939059/index.html" target="_blank">活動紹介</a></li>
                     <li><a href="#interview-section">部員の声</a></li>
                     <li><a href="#freshmen-section">新歓情報</a></li>
-                    <li><a class="nav-register-button" href="https://www.google.com/intl/ja_jp/forms/about/" target="_blank">説明会お申し込み</a></li>
+                    <li><a class="nav-register-button" href="https://docs.google.com/forms/d/e/1FAIpQLSc46qYkRKMkMs5Q5EIHskzgHI5yfozT4JdAPgHFzGOR9oZYrA/viewform?usp=sf_link" target="_blank">説明会お申し込み</a></li>
                 </ul>
 
             </nav>
@@ -57,7 +61,7 @@
                     <li><a href="http://www.keio-golf.com/blog/cat21939059/index.html" target="_blank">活動紹介</a></li>
                     <li><a href="#interview-section">部員の声</a></li>
                     <li><a href="#freshmen-section">新歓情報</a></li>
-                    <li><a class="nav-register-button" href="https://www.google.com/intl/ja_jp/forms/about/" target="_blank">説明会お申し込み</a></li>
+                    <li><a class="nav-register-button" href="https://docs.google.com/forms/d/e/1FAIpQLSc46qYkRKMkMs5Q5EIHskzgHI5yfozT4JdAPgHFzGOR9oZYrA/viewform?usp=sf_link">説明会お申し込み</a></li>
                 </ul>
              
              
@@ -243,8 +247,8 @@
                     </span>18:00~18:45</h4>
 
             </div>
-            <a href="https://www.google.com/intl/ja_jp/forms/about/" class="pc_register-button" target="_blank">説明会お申し込み</a>
-            <a href="https://www.google.com/intl/ja_jp/forms/about/" class="sp_register-button" target="_blank">説明会お申し込み</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc46qYkRKMkMs5Q5EIHskzgHI5yfozT4JdAPgHFzGOR9oZYrA/viewform?usp=sf_link" class="pc_register-button" target="_blank">説明会お申し込み</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc46qYkRKMkMs5Q5EIHskzgHI5yfozT4JdAPgHFzGOR9oZYrA/viewform?usp=sf_link" class="sp_register-button" target="_blank">説明会お申し込み</a>
 
         </div>
         <div class="welcome-box fuwawa">
@@ -269,7 +273,7 @@
                 <div class="contact-textbox">
                     <h3>気軽に質問してください！</h3>
                     <p>公式LINEではゴルフ部に関する質問を受け付けています。<br>新歓担当の部員が回答させていただきます。</p>
-                    <a href="https://line.me/ja/" target="_blank">公式LINE</a>
+                    <a href="https://lin.ee/QibPdj3" target="_blank">公式LINE</a>
 
                 </div>
 
@@ -284,7 +288,7 @@
                     </div>
 
                     <div class="sp_contact_link sp_line_link">
-                        <a href="https://line.me/ja/" target="_blank">公式LINE</a>
+                        <a href="https://lin.ee/QibPdj3" target="_blank">公式LINE</a>
 
                     </div>
                 </div>
@@ -299,7 +303,7 @@
                 <div class="contact-textbox">
                     <h3>最新情報をチェック！</h3>
                     <p>公式Instagramでは新歓の最新情報を発信しています。<br>部員紹介なども行なっているのでチェックしてみてください！</p>
-                    <a href="https://www.instagram.com/?hl=ja" target="_blank">公式Instagram</a>
+                    <a href="https://www.instagram.com/keiogolf_72/" target="_blank">公式Instagram</a>
 
                 </div>
 
@@ -311,7 +315,7 @@
                     </div>
 
                     <div class="sp_contact_link ">
-                        <a href="https://line.me/ja/" target="_blank">公式Instagram</a>
+                        <a href="https://www.instagram.com/keiogolf_72/" target="_blank">公式Instagram</a>
 
                     </div>
                 </div>
